--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -27,5 +27,8 @@
     "angular-route": "~1.7.2",
     "angular-sanitize": "~1.7.2",
     "angular-markdown-directive": "~0.3.1"
+  },
+  "resolutions": {
+    "angular": "1.7.9"
   }
 }
