Add config option ProtectedByPasswordForce to force users to protect uploads with a password

--- a/server/plikd.cfg
+++ b/server/plikd.cfg
@@ -14,10 +14,11 @@ MaxFilePerUpload    = 1000
 
 DefaultTTL          = 2592000       # 30 days
 MaxTTL              = 2592000       # -1 => No limit
-OneShot             = true          # Allow users to make one shot uploads
-Removable           = true          # allow users to make removable uploads
-Stream              = true          # Enable stream mode
+OneShot             = false          # Allow users to make one shot uploads
+Removable           = false          # allow users to make removable uploads
+Stream              = false          # Enable stream mode
 ProtectedByPassword = true          # Allow users to protect the download with a password
+ProtectedByPasswordForce = true     # Force users to protect the download with a password
 
 SslEnabled          = false         # Enable SSL
 SslCert             = "plik.crt"    # Path to your certificate file
